syntax = "proto3";

package hyperterse;

option go_package = "github.com/hyperterse/hyperterse/core/proto/runtime";

// ToolService provides endpoints for executing tools
service ToolService {
  // ExecuteTool executes a tool by name with provided inputs
  // REST: POST /tool/{tool_name}
  rpc ExecuteTool(ExecuteToolRequest) returns (ExecuteToolResponse);
}

// MCPService provides MCP protocol endpoints
service MCPService {
// ListTools returns all available tools as MCP tools
  // JSON-RPC 2.0: POST /mcp with method "tools/list"
  rpc ListTools(ListToolsRequest) returns (ListToolsResponse);

  // CallTool executes a tool by name
  // JSON-RPC 2.0: POST /mcp with method "tools/call"
  rpc CallTool(CallToolRequest) returns (CallToolResponse);
}

// ExecuteToolRequest contains the tool name and input parameters
message ExecuteToolRequest {
  string tool_name = 1; // Required
  map<string, string> inputs = 2; // JSON-encoded values
}

// ExecuteToolResponse contains the tool results
message ExecuteToolResponse {
  repeated ResultRow results = 1; // JSON-encoded rows
  string error = 2;
  bool success = 3;
}

// ResultRow represents a single row of results
message ResultRow {
  map<string, string> fields = 1; // Column name -> JSON-encoded value
}

// ListToolsRequest is empty
message ListToolsRequest {}

// ListToolsResponse contains all available tools
message ListToolsResponse {
  repeated ListedTool tools = 1;
}

// ListedTool represents an MCP tool in list responses.
message ListedTool {
  string name = 1; // Required
  string description = 2; // Required
  map<string, ToolInput> inputs = 3;
}

// ToolInput describes an input parameter for a tool
message ToolInput {
  string type = 1; // Required
  string description = 2;
  bool optional = 3;
  string default_value = 4;
}

// CallToolRequest contains the tool name and arguments
message CallToolRequest {
  string name = 1; // Required
  map<string, string> arguments = 2;
}

// CallToolResponse contains the tool execution result
message CallToolResponse {
  string content = 1; // JSON-encoded results
  bool is_error = 2;
}

